--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <body>
         <h1>La meua primera pràctica</h1>
         <img src="img/giphy.gif">
-        <img src="https://media.giphy.com/media/AQ60Mqpz7sJLK4DiOW/giphy.gif">
+         <a href="http://www.easdalcoi.es/"><img src="https://media.giphy.com/media/AQ60Mqpz7sJLK4DiOW/giphy.gif"></a>
     </body>
 </html>
